# service-python-modules

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
logger/: README.md  pyproject.toml
logger/manor_logger/: __init__.py  direct_logger.py  llm_instrumentation.py  structured_logger.py
manor/: README.md  __init__.py
manor/feature_flags/: README.md  __init__.py  client.py
manor/logger/: README.md  __init__.py  context.py  direct_logger.py  llm_instrumentation.py  structured_logger.py
manor/mcp_auth/: README.md  __init__.py  token.py
tests/: __init__.py  test_feature_flags.py  test_logger.py  test_mcp_auth.py
