[project]
name = "manor-logger"
version = "0.1.0"
description = "Shared logging utilities for Manor services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddtrace>=2.0.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manor_logger"]
